--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,12 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.48"
     implementation("androidx.hilt:hilt-navigation-compose:1.1.0")
 
+    // NETWORK LAYER
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
