--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     // GLIDE
     implementation "com.github.bumptech.glide:compose:1.0.0-beta01"
 
+    // MAP
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
