--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,11 +79,23 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
 
     // PREVIEW
-    debugImplementation("androidx.compose.ui:ui-tooling:1.6.0")
-    implementation("androidx.compose.ui:ui-tooling-preview:1.6.0")
+    debugImplementation("androidx.compose.ui:ui-tooling:1.6.1")
+    implementation("androidx.compose.ui:ui-tooling-preview:1.6.1")
 
     // ACCOMPANIST
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.34.0"
+
+    def room_version = "2.4.2"
+
+    // ROOM
+    // Add Room dependencies
+    implementation "androidx.room:room-runtime:$room_version" // Use the latest version
+    annotationProcessor "androidx.room:room-compiler:$room_version" // For Java
+    kapt "androidx.room:room-compiler:$room_version" // For Kotlin
+
+    // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -91,4 +103,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation "androidx.room:room-testing:$room_version"
+
 }
