add db code to home repository

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation("androidx.activity:activity-compose:1.8.2")
     implementation "androidx.compose.runtime:runtime-livedata:1.5.4"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0" //
 
     // COMPOSE NAVIGATION
     implementation "androidx.navigation:navigation-compose:2.7.6"
