--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# OpenAI API Key
+openai_api_key="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"
